userspace/ksud/src/bindings_prebuilt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of app_profile__bindgen_ty_1__bindgen_ty_2"]
        [::std::mem::size_of::<app_profile__bindgen_ty_1__bindgen_ty_2>() - 2usize];
    ["Alignment of app_profile__bindgen_ty_1__bindgen_ty_2"]
        [::std::mem::align_of::<app_profile__bindgen_ty_1__bindgen_ty_2>() - 1usize];
    ["Offset of field: app_profile__bindgen_ty_1__bindgen_ty_2::use_default"]
        [::std::mem::offset_of!(app_profile__bindgen_ty_1__bindgen_ty_2, use_default) - 0usize];
    ["Offset of field: app_profile__bindgen_ty_1__bindgen_ty_2::profile"]
        [::std::mem::offset_of!(app_profile__bindgen_ty_1__bindgen_ty_2, profile) - 1usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of app_profile__bindgen_ty_1"]
        [::std::mem::size_of::<app_profile__bindgen_ty_1>() - 512usize];
    ["Alignment of app_profile__bindgen_ty_1"]
        [::std::mem::align_of::<app_profile__bindgen_ty_1>() - 8usize];
    ["Offset of field: app_profile__bindgen_ty_1::rp_config"]
        [::std::mem::offset_of!(app_profile__bindgen_ty_1, rp_config) - 0usize];
    ["Offset of field: app_profile__bindgen_ty_1::nrp_config"]
        [::std::mem::offset_of!(app_profile__bindgen_ty_1, nrp_config) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of app_profile"][::std::mem::size_of::<app_profile>() - 784usize];
    ["Alignment of app_profile"][::std::mem::align_of::<app_profile>() - 8usize];
    ["Offset of field: app_profile::version"]
        [::std::mem::offset_of!(app_profile, version) - 0usize];
    ["Offset of field: app_profile::key"][::std::mem::offset_of!(app_profile, key) - 4usize];
    ["Offset of field: app_profile::curr_uid"]
        [::std::mem::offset_of!(app_profile, curr_uid) - 260usize];
    ["Offset of field: app_profile::allow_su"]
        [::std::mem::offset_of!(app_profile, allow_su) - 264usize];
};
pub const KERNEL_SU_UAPI_VERSION: __u32 = 2;
pub const KSU_INSTALL_MAGIC1: __u32 = 3735928559;
pub const KSU_INSTALL_MAGIC2: __u32 = 3405691582;
pub const CHANGE_MANAGER_UID: __u32 = 10006;
pub const KSU_UMOUNT_GETSIZE: __u8 = 107;
pub const KSU_UMOUNT_GETLIST: __u8 = 108;
pub const GET_SULOG_DUMP_V2: __u32 = 10010;
pub const CHANGE_KSUVER: __u32 = 10011;
pub const CHANGE_SPOOF_UNAME: __u32 = 10012;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_become_daemon_cmd {
    pub token: [__u8; 65usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_become_daemon_cmd"][::std::mem::size_of::<ksu_become_daemon_cmd>() - 65usize];
    ["Alignment of ksu_become_daemon_cmd"]
        [::std::mem::align_of::<ksu_become_daemon_cmd>() - 1usize];
    ["Offset of field: ksu_become_daemon_cmd::token"]
        [::std::mem::offset_of!(ksu_become_daemon_cmd, token) - 0usize];
};
pub const EVENT_POST_FS_DATA: __u32 = 1;
pub const EVENT_BOOT_COMPLETED: __u32 = 2;
pub const EVENT_MODULE_MOUNTED: __u32 = 3;
pub const KSU_GET_INFO_FLAG_LKM: __u32 = 1;
pub const KSU_GET_INFO_FLAG_MANAGER: __u32 = 2;
pub const KSU_GET_INFO_FLAG_LATE_LOAD: __u32 = 4;
pub const KSU_GET_INFO_FLAG_PR_BUILD: __u32 = 8;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_info_cmd {
    pub version: __u32,
    pub flags: __u32,
    pub features: __u32,
    pub uapi_version: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_info_cmd"][::std::mem::size_of::<ksu_get_info_cmd>() - 16usize];
    ["Alignment of ksu_get_info_cmd"][::std::mem::align_of::<ksu_get_info_cmd>() - 4usize];
    ["Offset of field: ksu_get_info_cmd::version"]
        [::std::mem::offset_of!(ksu_get_info_cmd, version) - 0usize];
    ["Offset of field: ksu_get_info_cmd::flags"]
        [::std::mem::offset_of!(ksu_get_info_cmd, flags) - 4usize];
    ["Offset of field: ksu_get_info_cmd::features"]
        [::std::mem::offset_of!(ksu_get_info_cmd, features) - 8usize];
    ["Offset of field: ksu_get_info_cmd::uapi_version"]
        [::std::mem::offset_of!(ksu_get_info_cmd, uapi_version) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_info_legacy_cmd {
    pub version: __u32,
    pub flags: __u32,
    pub features: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_info_legacy_cmd"][::std::mem::size_of::<ksu_get_info_legacy_cmd>() - 12usize];
    ["Alignment of ksu_get_info_legacy_cmd"]
        [::std::mem::align_of::<ksu_get_info_legacy_cmd>() - 4usize];
    ["Offset of field: ksu_get_info_legacy_cmd::version"]
        [::std::mem::offset_of!(ksu_get_info_legacy_cmd, version) - 0usize];
    ["Offset of field: ksu_get_info_legacy_cmd::flags"]
        [::std::mem::offset_of!(ksu_get_info_legacy_cmd, flags) - 4usize];
    ["Offset of field: ksu_get_info_legacy_cmd::features"]
        [::std::mem::offset_of!(ksu_get_info_legacy_cmd, features) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_report_event_cmd {
    pub event: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_report_event_cmd"][::std::mem::size_of::<ksu_report_event_cmd>() - 4usize];
    ["Alignment of ksu_report_event_cmd"][::std::mem::align_of::<ksu_report_event_cmd>() - 4usize];
    ["Offset of field: ksu_report_event_cmd::event"]
        [::std::mem::offset_of!(ksu_report_event_cmd, event) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_set_sepolicy_cmd {
    pub data_len: __u64,
    pub data: __u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_set_sepolicy_cmd"][::std::mem::size_of::<ksu_set_sepolicy_cmd>() - 16usize];
    ["Alignment of ksu_set_sepolicy_cmd"][::std::mem::align_of::<ksu_set_sepolicy_cmd>() - 8usize];
    ["Offset of field: ksu_set_sepolicy_cmd::data_len"]
        [::std::mem::offset_of!(ksu_set_sepolicy_cmd, data_len) - 0usize];
    ["Offset of field: ksu_set_sepolicy_cmd::data"]
        [::std::mem::offset_of!(ksu_set_sepolicy_cmd, data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_sepolicy_cmd_hdr {
    pub cmd: __u32,
    pub subcmd: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_sepolicy_cmd_hdr"][::std::mem::size_of::<ksu_sepolicy_cmd_hdr>() - 8usize];
    ["Alignment of ksu_sepolicy_cmd_hdr"][::std::mem::align_of::<ksu_sepolicy_cmd_hdr>() - 4usize];
    ["Offset of field: ksu_sepolicy_cmd_hdr::cmd"]
        [::std::mem::offset_of!(ksu_sepolicy_cmd_hdr, cmd) - 0usize];
    ["Offset of field: ksu_sepolicy_cmd_hdr::subcmd"]
        [::std::mem::offset_of!(ksu_sepolicy_cmd_hdr, subcmd) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_check_safemode_cmd {
    pub in_safe_mode: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_check_safemode_cmd"][::std::mem::size_of::<ksu_check_safemode_cmd>() - 1usize];
    ["Alignment of ksu_check_safemode_cmd"]
        [::std::mem::align_of::<ksu_check_safemode_cmd>() - 1usize];
    ["Offset of field: ksu_check_safemode_cmd::in_safe_mode"]
        [::std::mem::offset_of!(ksu_check_safemode_cmd, in_safe_mode) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_allow_list_cmd {
    pub uids: [__u32; 128usize],
    pub count: __u32,
    pub allow: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_allow_list_cmd"][::std::mem::size_of::<ksu_get_allow_list_cmd>() - 520usize];
    ["Alignment of ksu_get_allow_list_cmd"]
        [::std::mem::align_of::<ksu_get_allow_list_cmd>() - 4usize];
    ["Offset of field: ksu_get_allow_list_cmd::uids"]
        [::std::mem::offset_of!(ksu_get_allow_list_cmd, uids) - 0usize];
    ["Offset of field: ksu_get_allow_list_cmd::count"]
        [::std::mem::offset_of!(ksu_get_allow_list_cmd, count) - 512usize];
    ["Offset of field: ksu_get_allow_list_cmd::allow"]
        [::std::mem::offset_of!(ksu_get_allow_list_cmd, allow) - 516usize];
};
#[repr(C)]
#[derive(Debug)]
pub struct ksu_new_get_allow_list_cmd {
    pub count: __u16,
    pub total_count: __u16,
    pub uids: __IncompleteArrayField<__u32>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_new_get_allow_list_cmd"]
        [::std::mem::size_of::<ksu_new_get_allow_list_cmd>() - 4usize];
    ["Alignment of ksu_new_get_allow_list_cmd"]
        [::std::mem::align_of::<ksu_new_get_allow_list_cmd>() - 4usize];
    ["Offset of field: ksu_new_get_allow_list_cmd::count"]
        [::std::mem::offset_of!(ksu_new_get_allow_list_cmd, count) - 0usize];
    ["Offset of field: ksu_new_get_allow_list_cmd::total_count"]
        [::std::mem::offset_of!(ksu_new_get_allow_list_cmd, total_count) - 2usize];
    ["Offset of field: ksu_new_get_allow_list_cmd::uids"]
        [::std::mem::offset_of!(ksu_new_get_allow_list_cmd, uids) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_uid_granted_root_cmd {
    pub uid: __u32,
    pub granted: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_uid_granted_root_cmd"]
        [::std::mem::size_of::<ksu_uid_granted_root_cmd>() - 8usize];
    ["Alignment of ksu_uid_granted_root_cmd"]
        [::std::mem::align_of::<ksu_uid_granted_root_cmd>() - 4usize];
    ["Offset of field: ksu_uid_granted_root_cmd::uid"]
        [::std::mem::offset_of!(ksu_uid_granted_root_cmd, uid) - 0usize];
    ["Offset of field: ksu_uid_granted_root_cmd::granted"]
        [::std::mem::offset_of!(ksu_uid_granted_root_cmd, granted) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_uid_should_umount_cmd {
    pub uid: __u32,
    pub should_umount: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_uid_should_umount_cmd"]
        [::std::mem::size_of::<ksu_uid_should_umount_cmd>() - 8usize];
    ["Alignment of ksu_uid_should_umount_cmd"]
        [::std::mem::align_of::<ksu_uid_should_umount_cmd>() - 4usize];
    ["Offset of field: ksu_uid_should_umount_cmd::uid"]
        [::std::mem::offset_of!(ksu_uid_should_umount_cmd, uid) - 0usize];
    ["Offset of field: ksu_uid_should_umount_cmd::should_umount"]
        [::std::mem::offset_of!(ksu_uid_should_umount_cmd, should_umount) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_manager_appid_cmd {
    pub appid: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_manager_appid_cmd"]
        [::std::mem::size_of::<ksu_get_manager_appid_cmd>() - 4usize];
    ["Alignment of ksu_get_manager_appid_cmd"]
        [::std::mem::align_of::<ksu_get_manager_appid_cmd>() - 4usize];
    ["Offset of field: ksu_get_manager_appid_cmd::appid"]
        [::std::mem::offset_of!(ksu_get_manager_appid_cmd, appid) - 0usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ksu_get_app_profile_cmd {
    pub profile: app_profile,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_app_profile_cmd"]
        [::std::mem::size_of::<ksu_get_app_profile_cmd>() - 784usize];
    ["Alignment of ksu_get_app_profile_cmd"]
        [::std::mem::align_of::<ksu_get_app_profile_cmd>() - 8usize];
    ["Offset of field: ksu_get_app_profile_cmd::profile"]
        [::std::mem::offset_of!(ksu_get_app_profile_cmd, profile) - 0usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ksu_set_app_profile_cmd {
    pub profile: app_profile,
}
